--- a/app/src/main/res/values-night/attrs.xml
+++ b/app/src/main/res/values-night/attrs.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="SnapEditText">3</declare-styleable>
+    <declare-styleable name="MyEditText">3</declare-styleable>
 </resources>
